--- a/example-server-api/pom.xml
+++ b/example-server-api/pom.xml
@@ -13,6 +13,21 @@
     <artifactId>example-server-api</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
+        <!--lombok插件-->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.10</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.zustcs.zroot</groupId>
+            <artifactId>zroot-spring-boot-starter-web</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
